--- a/echo_udp.ipynb
+++ b/echo_udp.ipynb
@@ -10,7 +10,7 @@
     "1. Client: sends a text to the server\n",
     "2. Server: responds to the client with the same text\n",
     "\n",
-    "## We will divide the problem into X parts\n",
+    "## We will divide the problem into 5 parts\n",
     "\n",
     "1. Send the text over the network\n",
     "2. Recive the text from a peer\n",
